<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <!--android:background="@color/pink">-->

    <ImageView
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="400dp"
        android:src="@drawable/images"/>

    <TextView
        android:id="@+id/welcome_page_text"
        android:textSize="55dp"
        android:fontFamily="Roboto"
        android:textColor="@color/pink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Food Tracker"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical">
    <Button
        android:id="@+id/view_entries_button"
        android:text="View"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"/>
        <!--android:layout_gravity="center_horizontal"-->

    <Button
        android:id="@+id/new_entry_button"
        android:text="New Food Entry"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"/>
        <!--android:layout_gravity="center_horizontal" -->
    </LinearLayout>

    <TextView
        android:orientation="horizontal"
        android:id="@+id/blank2"
        android:text="@string/Carb"
        android:textSize="25dp"
        android:fontFamily="casual"
        android:textColor="#ECEFF1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="1"/>

    <TextView
        android:orientation="horizontal"
        android:id="@+id/blank"
        android:text="@string/RI"
        android:textSize="25dp"
        android:fontFamily="casual"
        android:textColor="#ECEFF1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="1"/>

    <TextView
        android:orientation="horizontal"
        android:id="@+id/RI"
        android:text="@string/RI"
        android:textSize="25dp"
        android:fontFamily="casual"
        android:textColor="@color/pink"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="1"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="0dip"
        android:layout_width="match_parent"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/adi_energy"
            android:text="@string/Energy"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@drawable/my_button_bg" />
        <!--android:layout_gravity="center_horizontal"-->

        <Button
            android:id="@+id/adi_fat"
            android:text="@string/Fat"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@drawable/my_button_bg"/>
        <!--android:layout_gravity="center_horizontal" -->
        <Button
            android:id="@+id/adi_carb"
            android:text="@string/Carb"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@drawable/my_button_bg"/>
        <Button
            android:id="@+id/adi_sugar"
            android:text="@string/Sugars"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@drawable/my_button_bg"/>
        <Button
            android:id="@+id/adi_protein"
            android:text="@string/Protein"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@drawable/my_button_bg" />
        <Button
            android:id="@+id/adi_salt"
            android:text="@string/Salt"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@drawable/my_button_bg"/>
    </LinearLayout>


</LinearLayout>